[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/Pixle_Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Screens/GameOver.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 180
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 147.0
margin_top = 120.0
margin_right = 876.0
margin_bottom = 480.0

[node name="GameOverLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 729.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="TryAgainButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 729.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 2 )
text = "Try Again"
flat = true

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 274.0
margin_right = 729.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
flat = true
[connection signal="pressed" from="CenterContainer/VBoxContainer/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
